php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #52849 GNU MP invalid version match
Submitted: 2010-09-15 10:40 UTC Modified: 2010-09-15 12:52 UTC
From: jariberg at gmail dot com Assigned: aharvey (profile)
Status: Closed Package: GNU MP related
PHP Version: 5.3.3 OS: All
Private report: No CVE-ID: None
 [2010-09-15 10:40 UTC] jariberg at gmail dot com
Description:
------------
in PHP's ext/gmp/gmp.c file the GNU_MP version match is invalid:

The current GNU MP version match only takes into account if the installed GMP 
version is < 5.0.

Original code:

__GNU_MP_VERSION >= 4 && __GNU_MP_VERSION_MINOR >= 2


Correct code:

(((__GNU_MP_VERSION >= 4) && (__GNU_MP_VERSION_MINOR >= 2)) || (__GNU_MP_VERSION 
>= 5))





Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-09-15 10:44 UTC] jariberg at gmail dot com
-Summary: Invalid version match +Summary: GMP extension has invalid version match
 [2010-09-15 10:44 UTC] jariberg at gmail dot com
Changed summary text
 [2010-09-15 10:44 UTC] aharvey@php.net
-Summary: GMP extension has invalid version match +Summary: Invalid version match -Status: Open +Status: Assigned -Assigned To: +Assigned To: aharvey
 [2010-09-15 12:51 UTC] aharvey@php.net
Automatic comment from SVN on behalf of aharvey
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=303391
Log: Fix bug #52849 (GNU MP invalid version match).
 [2010-09-15 12:52 UTC] aharvey@php.net
-Summary: Invalid version match +Summary: GNU MP invalid version match -Status: Assigned +Status: Closed
 [2010-09-15 12:52 UTC] aharvey@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 04:00:02 2026 UTC