Fix bug #52849 (GNU MP invalid version match).